--- a/tunein/src/css/SideBar.css
+++ b/tunein/src/css/SideBar.css
@@ -1,9 +1,7 @@
-.sb-background {
+.sidebar {
   background-color: #1a9946;
-  color: white;
-  width: 20vw;
-  min-height: 100vh;
 }
+
 .mantine-Text-root {
   font-family: "Gotham";
   margin-left: 10px;
