--- a/tunein/src/css/UsersPage.css
+++ b/tunein/src/css/UsersPage.css
@@ -1,4 +1,18 @@
+.title {
+  padding: 40px;
+}
+
 .users-table {
   margin-top: 50px;
   margin-right: 50px;
+  margin: 0 auto;
+}
+
+#container {
+  width: 100%;
+  overflow: auto;
+}
+
+#container > Table {
+  width: 80%;
 }
